--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-toastify": "^9.0.8",
     "redux": "^4.1.2",
     "three": "^0.138.2",
     "typescript": "^4.5.5",
