--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.0",
+    "react-toast-notifications": "^2.5.1",
     "react-toastify": "^9.0.8",
     "redux": "^4.1.2",
     "three": "^0.138.2",
