--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.26.0",
     "react": "^17.0.2",
     "react-animate-on-scroll": "^2.1.5",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-input-mask": "^2.0.4",
